wip view collection

--- a/client/src/app/general/resource/resource.component.scss
+++ b/client/src/app/general/resource/resource.component.scss
@@ -2,6 +2,7 @@
 	display: inline-flex;
 	width: 100%;
 	border: 1px solid rgba(14, 13, 13, 0.158);
+	background-color: white;
 	border-radius: 5px;
     margin-bottom: 25px;
 
