--- a/client/src/app/general/collection/collection.component.scss
+++ b/client/src/app/general/collection/collection.component.scss
@@ -17,7 +17,7 @@ $block-border: 1px solid white;
     
     .collection {
         display: inline-grid;
-        grid-template-columns: $block-width $block-width;
+        grid-column: 2;
         margin-bottom: 5px;
         place-self: center stretch;
         
