--- a/client/src/app/general/resource/resource.component.html
+++ b/client/src/app/general/resource/resource.component.html
@@ -4,11 +4,11 @@
     <h4>{{ data.title }}</h4>
     <p>{{ data.description | truncate:[40] }}</p>
     <div class="actions">
-      <button [routerLink]="['view/', id]" mat-button>
+      <button [routerLink]="['resource/view/', id]" mat-button>
         <fa-icon [icon]="faEye"></fa-icon>
       </button>
 
-      <button [routerLink]="['edit/', id]" mat-button>
+      <button [routerLink]="['resource/edit/', id]" mat-button>
         <fa-icon [icon]="faEdit"></fa-icon>
       </button>
 
