--- a/client/src/app/pages/manage-resources/manage-resources.component.html
+++ b/client/src/app/pages/manage-resources/manage-resources.component.html
@@ -42,7 +42,7 @@
             </mat-form-field>
           </form>
           <div class="list-of-collections">
-              <app-collection *ngFor="let collection of collections" [data]="collection"></app-collection>
+              <app-collection *ngFor="let collection of collections" [data]="collection" [routerLink]="['view/collection/', collection._id]"></app-collection>
           </div>
         </div>
       </div>
