--- a/client/src/app/pages/manage-resources/manage-resources.component.html
+++ b/client/src/app/pages/manage-resources/manage-resources.component.html
@@ -2,25 +2,23 @@
   <mat-tab-group mat-align-tabs="center">
     <!-- * Resources -->
     <mat-tab label="Resources">
-      <div class="section">
-        <div class="section-header">
-          <h4>Manage Resources</h4>
-        </div>
+      <!-- * Search resources -->
+      <div class="search w-100">
+        <form [formGroup]="resourceSearchForm">
+          <mat-form-field appearance="outline">
+            <mat-label>Search</mat-label>
+            <mat-icon matPrefix>
+              <fa-icon [icon]="faSearch"></fa-icon>
+            </mat-icon>
+            <input matInput placeholder="Search for your resources" formControlName="query">
+          </mat-form-field>
+        </form>
+      </div>
 
-        <div class="section-content">
-          <form [formGroup]="resourceSearchForm">
-            <mat-form-field appearance="outline">
-              <mat-label>Search</mat-label>
-              <mat-icon matPrefix>
-                <fa-icon [icon]="faSearch"></fa-icon>
-              </mat-icon>
-              <input matInput placeholder="Search for your resources" formControlName="query">
-            </mat-form-field>
-          </form>
-
-          <app-resource *ngFor="let resource of resources" [data]="resource" (drResponse)="drResponseHandler($event)">
-          </app-resource>
-        </div>
+      <!-- * Resource grid -->
+      <div class="resource-grid">
+        <app-resource *ngFor="let resource of resources" [data]="resource" (drResponse)="drResponseHandler($event)">
+        </app-resource>
       </div>
     </mat-tab>
 
@@ -42,7 +40,8 @@
             </mat-form-field>
           </form>
           <div class="list-of-collections">
-              <app-collection *ngFor="let collection of collections" [data]="collection" [routerLink]="['view/collection/', collection._id]"></app-collection>
+            <app-collection *ngFor="let collection of collections" [data]="collection"
+              [routerLink]="['view/collection/', collection._id]"></app-collection>
           </div>
         </div>
       </div>
