--- a/client/src/app/general/resource/resource.component.html
+++ b/client/src/app/general/resource/resource.component.html
@@ -1,13 +1,9 @@
 <div class="resource">
-  <img class="image" [src]="data.image">
+  <img class="image" [src]="data.image" [routerLink]="['resource/view/', id]">
   <div class="details">
     <h4>{{ data.title }}</h4>
     <p>{{ data.description | truncate:[40] }}</p>
     <div class="actions">
-      <button [routerLink]="['resource/view/', id]" mat-button>
-        <fa-icon [icon]="faEye"></fa-icon>
-      </button>
-
       <button [routerLink]="['resource/edit/', id]" mat-button>
         <fa-icon [icon]="faEdit"></fa-icon>
       </button>
