--- a/client/src/app/general/post/post.component.scss
+++ b/client/src/app/general/post/post.component.scss
@@ -1,213 +1,234 @@
-@import "../../../../node_modules/bootstrap/dist/css/bootstrap.min.css";
-
 .post {
-    border: 1px solid #EEE;
-    border-radius: 5px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 25px;
-    max-width: 600px;
-    background-color: white;
-    box-shadow: 0 8px 20px 0 rgba(218,224,235,.6);
+  border: 1px solid #EEE;
+  border-radius: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 25px;
+  max-width: 600px;
+  background-color: white;
+  box-shadow: 0 8px 20px 0 rgba(218, 224, 235, .6);
 
-    .header {
-        padding: 15px;
-        font-size: 14px;
-        border-bottom: 1px solid #EEE;
+  .header {
+    display: grid;
+    grid-template-columns: 50px 1fr 1fr;
+    padding: 10px 15px;
+    font-size: 14px;
+    border-bottom: 1px solid #EEE;
 
-        .post-menu {
-            display: inline;
-            cursor: pointer;
-
-            fa-icon {
-                float: right;
-                color: rgba(0, 0, 0, .5);
-            }
-        }
+    .user-image {
+      background-size: contain;
+      width: 40px;
+      height: 40px;
+      border: 1px solid rgba(0, 0, 0, 0.2);
+      border-radius: 50%;
+      cursor: pointer;
     }
 
-    .image {
-        img {
-            width: 100%;
-            display: block;
-        }
-    }
+    .uploader-info {
+      align-self: center;
 
-    .title {
-        padding: 20px 15px 10px 15px;
-
-        strong {
-            font-family: 'Noto Sans SC', sans-serif;
-            font-size: 16px;
-        }
-    }
-
-    .tags {
-        padding: 10px 15px 5px 15px;
-        overflow-wrap: break-word;
-        word-wrap: break-word;
-        .tag {
-            a {
-                strong {
-                    color: rgba(0, 0, 0, .8);
-                    border-radius: 5px;
-                    cursor: pointer;
-                    font-size: 12px;
-                    margin-right: 5px; 
-                }
-            }
-        }
-    }
-
-    .description {
-        padding: 15px;
-        line-height: 25px;
-        transition: height 0.2s ease-in-out;
-
-        p {
-            font-size: 14px;
-            margin-bottom: 0;
-
-            span {
-                cursor: pointer;
-                color: rgb(30, 90, 255);
-            }
-        }
-    }
-
-    .controls {
-        padding: 0 15px 10px 15px;
-
-        .btn {
-            font-size: 14px;
-            width: 100%;
-        }
-
-        .btn:focus {
-            outline: 0;
-            box-shadow: none;
-        }
-
-        .btn-like {
-            fa-icon {
-                color: rgba(0,0,0,.2);
-            }
-        }
-
-        .btn-comment {
-            fa-icon {
-                color: rgba(0,0,0,.2);
-            }
-        }
-
-        .btn-atc {
-            fa-icon {
-                color: rgba(0,0,0,.2);
-            }
-        }
-    }
-
-    .all-comments {
-        border-top: 1px solid rgba(0,0,0,0.1);
-        margin-top: 10px;
-        padding: 15px 15px 0 15px;
-
-        .comment {
-            font-size: 14px;
-            margin-bottom: 15px;
-
-            .username {
-                margin-right: 5px;
-            }
-
-            .text {
-                margin-bottom: 0;
-            }
-        }
-    }
-
-    .timestamp {
-        color: rgba(0,0,0,.3);
-        padding-left: 15px;
-        margin-bottom: 10px;
+      small {
+        display: block;
+        margin-top: 5px;
+        color: rgba(0, 0, 0, .3);
         text-transform: lowercase;
+      }
     }
 
-    .add-comment {
-        border-top: 1px solid rgba(0,0,0,.1);
-        padding: 20px 15px 0 15px;
-        position: relative;
-        textarea {
-            width: 100% !important;
-            border-style: none; 
-	        border: 0;
-            border-color: transparent;
-            font-size: 14px;
-            resize: none;
-        }
+    .post-menu {
+      cursor: pointer;
+      align-self: center;
 
-        textarea:focus {
-            outline: 0;
-            border: 0;
-        }
-
-        button {
-            background-color: transparent;
-            border: none;
-            font-size: 14px;
-            float: right;
-            margin-top: 0;
-            opacity: 0;
-            animation: buttonAppear 0.1s ease-in-out;
-            animation-fill-mode: forwards;
-
-            fa-icon {
-                color: rgba(0,0,0,.5);
-            }
-        }
+      fa-icon {
+        float: right;
+        color: rgba(0, 0, 0, .5);
+      }
     }
+  }
+
+  .image {
+    img {
+      width: 100%;
+      display: block;
+    }
+  }
+
+  .title {
+    padding: 20px 15px 10px 15px;
+
+    strong {
+      font-family: 'Noto Sans SC', sans-serif;
+      font-size: 16px;
+    }
+  }
+
+  .tags {
+    padding: 10px 15px 5px 15px;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+
+    .tag {
+      a {
+        strong {
+          color: rgba(0, 0, 0, .8);
+          border-radius: 5px;
+          cursor: pointer;
+          font-size: 12px;
+          margin-right: 5px;
+        }
+      }
+    }
+  }
+
+  .description {
+    padding: 15px;
+    line-height: 25px;
+    transition: height 0.2s ease-in-out;
+
+    p {
+      font-size: 14px;
+      margin-bottom: 0;
+
+      span {
+        cursor: pointer;
+        color: rgb(30, 90, 255);
+      }
+    }
+  }
+
+  .controls {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-self: center;
+    justify-self: center;
+    padding: 0 15px 10px 15px;
+
+    .btn {
+      font-size: 14px;
+      width: 100%;
+    }
+
+    .btn:focus {
+      outline: 0;
+      box-shadow: none;
+    }
+
+    .btn-like {
+      fa-icon {
+        color: rgba(0, 0, 0, .2);
+      }
+    }
+
+    .btn-comment {
+      fa-icon {
+        color: rgba(0, 0, 0, .2);
+      }
+    }
+
+    .btn-atc {
+      fa-icon {
+        color: rgba(0, 0, 0, .2);
+      }
+    }
+  }
+
+  .all-comments {
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    margin-top: 10px;
+    padding: 15px 15px 0 15px;
+
+    .comment {
+      font-size: 14px;
+      margin-bottom: 15px;
+
+      .username {
+        margin-right: 5px;
+      }
+
+      .text {
+        margin-bottom: 0;
+      }
+    }
+  }
+
+  .add-comment {
+    border-top: 1px solid rgba(0, 0, 0, .1);
+    padding: 20px 15px 0 15px;
+    position: relative;
+
+    textarea {
+      width: 100% !important;
+      border-style: none;
+      border: 0;
+      border-color: transparent;
+      font-size: 14px;
+      resize: none;
+    }
+
+    textarea:focus {
+      outline: 0;
+      border: 0;
+    }
+
+    button {
+      position: absolute;
+      right: 15px;
+      top: 20px;
+      background-color: transparent;
+      border: none;
+      font-size: 14px;
+      margin-top: 0;
+      opacity: 0;
+      animation: buttonAppear 0.1s ease-in-out;
+      animation-fill-mode: forwards;
+
+      fa-icon {
+        color: rgba(0, 0, 0, .5);
+      }
+    }
+  }
 }
 
 .is-liked {
-    fa-icon {
-        color: blue !important;
-    }
+  fa-icon {
+    color: blue !important;
+  }
 }
 
 .show-comments {
-    fa-icon {
-        color: rgba(0,0,0,.5) !important;
-    }
+  fa-icon {
+    color: rgba(0, 0, 0, .5) !important;
+  }
 }
 
 textarea {
-    border: none !important;
+  border: none !important;
 }
 
 @keyframes buttonAppear {
-    0% {
-        opacity: 0;
-        transform: scale(0);
-    }
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
 
-    100% {
-        opacity: 1;
-        transform: scale(1.0);
-    }
+  100% {
+    opacity: 1;
+    transform: scale(1.0);
+  }
 }
 
 @media (min-width: 768px) {
-    .post {
-        .title {
-            strong {
-                font-size: 20px;
-            }
-        }
-
-        .description {
-            p {
-                font-size: 16px;
-            }
-        }
+  .post {
+    .title {
+      strong {
+        font-size: 20px;
+      }
     }
+
+    .description {
+      p {
+        font-size: 16px;
+      }
+    }
+  }
 }
