--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -1,4 +1,5 @@
 .app-container {
+  background-color: #DEE8FF;
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -38,9 +39,10 @@
 
     .profile-image {
       background-size: contain;
+      box-shadow: 0 8px 20px 0 rgba(145, 145, 145, 0.6);
       width: 40px;
       height: 40px;
-      border: 1px solid rgba(0, 0, 0, 0.2);
+      border: 2px solid white;
       border-radius: 50%;
       float: right;
       cursor: pointer;
