--- a/client/src/app/general/post/post.component.scss
+++ b/client/src/app/general/post/post.component.scss
@@ -59,21 +59,23 @@
     strong {
       font-family: 'Noto Sans SC', sans-serif;
       font-size: 16px;
+      text-transform: uppercase;
     }
   }
 
   .tags {
-    padding: 10px 15px 5px 15px;
+    padding: 0 15px 0 15px;
     overflow-wrap: break-word;
     word-wrap: break-word;
 
     .tag {
       a {
         strong {
-          color: rgba(0, 0, 0, .8);
+          color: #FE685F;
           border-radius: 5px;
           cursor: pointer;
           font-size: 12px;
+          font-weight: bold;
           margin-right: 5px;
         }
       }
@@ -81,18 +83,22 @@
   }
 
   .description {
-    padding: 15px;
+    padding: 0 15px 15px 15px;
     line-height: 25px;
     transition: height 0.2s ease-in-out;
 
     p {
       font-size: 14px;
-      margin-bottom: 0;
+      margin-bottom: 5px;
+    }
 
-      span {
-        cursor: pointer;
-        color: rgb(30, 90, 255);
-      }
+    span {
+      text-align: center;
+      display: block;
+      font-weight: bold;
+      cursor: pointer;
+      color: #481A89;
+      font-size: 12px;
     }
   }
 
@@ -172,18 +178,22 @@
 
     button {
       position: absolute;
+      border-radius: 50%;
+      box-shadow: 0 8px 20px 0 rgba(72, 26, 137, .5);
+      width: 25px;
+      height: 25px;
       right: 15px;
       top: 20px;
-      background-color: transparent;
+      background-color: #481A89;
       border: none;
-      font-size: 14px;
+      font-size: 12px;
       margin-top: 0;
       opacity: 0;
       animation: buttonAppear 0.1s ease-in-out;
       animation-fill-mode: forwards;
 
       fa-icon {
-        color: rgba(0, 0, 0, .5);
+        color: white;
       }
     }
   }
