--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -34,6 +34,10 @@ button:focus {
   font-weight: bold;
 }
 
+.mat-drawer-content {
+  background-color: #DEE8FF;
+}
+
 mat-nav-list {
   min-width: 200px;
 
