--- a/client/src/app/general/post/post.component.scss
+++ b/client/src/app/general/post/post.component.scss
@@ -55,11 +55,60 @@
 
   .title {
     padding: 20px 15px 10px 15px;
+    position: relative;
 
     strong {
       font-family: 'Noto Sans SC', sans-serif;
       font-size: 16px;
       text-transform: uppercase;
+    }
+
+    .collection-badge-false {
+      position: absolute;
+      top: 15px;
+      right: 0;
+      padding: 15px 10px;
+      background-color: #FF795A;
+      border-top-left-radius: 5px;
+      border-bottom-left-radius: 5px;
+      box-shadow: 0 8px 20px 0 rgba(255, 121, 90, .5);
+      color: white;
+      cursor: pointer;
+      font-size: 10px;
+    }
+
+    .collection-badge-true {
+      position: absolute;
+      top: 15px;
+      right: 0;
+      padding: 15px 10px;
+      background-color: #FFA25A;
+      border-top-left-radius: 5px;
+      border-bottom-left-radius: 5px;
+      box-shadow: 0 8px 20px 0 rgba(255, 121, 90, .5);
+      color: white;
+      cursor: pointer;
+      font-size: 10px;
+    }
+
+    .triangle-1 {
+      position: absolute;
+      top: 0;
+      right: 46px;
+      width: 0;
+      height: 0;
+      border-top: 25px solid #FFA25A;
+      border-left: 25px solid transparent;
+    }
+
+    .triangle-2 {
+      position: absolute;
+      top: 16px;
+      right: 46px;
+      width: 0;
+      height: 0;
+      border-bottom: 25px solid #FFA25A;
+      border-left: 25px solid transparent;
     }
   }
 
