--- a/client/src/app/general/resource/resource.component.scss
+++ b/client/src/app/general/resource/resource.component.scss
@@ -7,6 +7,7 @@
 	border-radius: 5px;
 	margin-bottom: 25px;
 	transition: box-shadow 0.2s ease-in;
+	position: relative;
 	
 	&:hover {
 		box-shadow: 0 22px 32px 0 rgba(197, 197, 197, 0.6);
