--- a/client/src/app/pages/view-collection/view-collection.component.html
+++ b/client/src/app/pages/view-collection/view-collection.component.html
@@ -3,7 +3,16 @@
         <h1 class="title" contenteditable="true">{{ collection.title }}<fa-icon [icon]="faPen"></fa-icon></h1>
 
         <div class="resource-grid">
-            <app-resource *ngFor="let resource of resources" [data]="resource"></app-resource>
+            <app-resource 
+            *ngFor="let resource of resources" 
+            [data]="resource" 
+            [isInCollectionPage]="true"
+            (drResponse)="drResponseHandler($event)"
+            [collectionId]="id"></app-resource>
+        </div>
+
+        <div *ngIf="resources.length === 0">
+            <p>This collection is empty</p>
         </div>
     </div>
 </div>
