project file structure changed

--- a/client/src/app/pages/page-not-found/page-not-found.component.html
+++ b/client/src/app/pages/page-not-found/page-not-found.component.html
@@ -2,6 +2,6 @@
   <div class="page-not-found">
     <h1>404</h1>
     <p>Page not found</p>
-    <button mat-raised-button color="accent" [routerLink]="['']" matTooltip="To the place I belong">Take me Home</button>  
+    <button mat-raised-button color="accent" [routerLink]="['/']" matTooltip="To the place I belong">Take me Home</button>  
   </div>
 </div>
