--- a/client/src/app/general/resource/resource.component.html
+++ b/client/src/app/general/resource/resource.component.html
@@ -1,10 +1,10 @@
 <div class="resource">
-  <img class="image" [src]="data.image" [routerLink]="['resource/view/', id]">
+  <img class="image" [src]="data.image" [routerLink]="['/view/', id]">
   <div class="details">
     <h4>{{ data.title }}</h4>
     <p>{{ data.description | truncate:[40] }}</p>
     <div class="actions">
-      <button *ngIf="!isInCollectionPage" [routerLink]="['../resource/edit/', id]" mat-button>
+      <button *ngIf="!isInCollectionPage" [routerLink]="['resource/edit/', id]" mat-button>
         <fa-icon [icon]="faEdit"></fa-icon>
       </button>
 
