--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -1,37 +1,30 @@
 <mat-progress-bar mode="query" *ngIf="isLoading">
 </mat-progress-bar>
-<div class="parent">
-  <div class="login-form-parent box-shadow">
-    <div class="title">
-        Login to <strong>Everest</strong>
-    </div>
-    <div class="row">
-      <form [formGroup]="loginForm" (ngSubmit)="login()">
-        <div class="col-xs-12">
-          <mat-form-field appearance="outline">
-            <mat-label>Username</mat-label>
-            <input matInput formControlName="username" />
-            <mat-error *ngIf="loginForm.controls['username'].hasError('required')">
-              Please enter username
-            </mat-error>
-          </mat-form-field>
-        </div>
-    
-        <div class="col-xs-12">
-          <mat-form-field appearance="outline">
-            <mat-label>Password</mat-label>
-            <input matInput type="password" formControlName="password"/>
-            <mat-error *ngIf="loginForm.controls['password'].hasError('required')">
-              Please enter password
-            </mat-error>
-          </mat-form-field>
-    
-          <div class="login-signup">
-            <a routerLink="/signup">Sign Up</a>
-            <button mat-raised-button color="primary" [disabled]="loggingIn">Login</button>
-          </div>
-        </div>
-      </form>
-    </div>
+
+<div class="form">
+  <p class="form-title">Sign In</p>
+  <form [formGroup]="loginForm" (ngSubmit)="login()">
+    <mat-form-field appearance="outline">
+      <mat-label>username</mat-label>
+      <input matInput formControlName="username" />
+      <mat-error *ngIf="loginForm.controls['username'].hasError('required')">
+        Please enter username
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>password</mat-label>
+      <input matInput type="password" formControlName="password" />
+      <mat-error *ngIf="loginForm.controls['password'].hasError('required')">
+        Please enter password
+      </mat-error>
+    </mat-form-field>
+    <app-custom-button buttonLabel="Login" [isDisabled]="loggingIn"></app-custom-button>
+  </form>
+</div>
+
+<div class="not-a-member">
+  <span>Not a member yet? Sign up here</span>
+  <div class="go-to-signup" matRipple>
+    <fa-icon [icon]="faArrowRight"></fa-icon>
   </div>
 </div>
