--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,23 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~normalize.css/normalize.css";
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-
-* {
-  font-family: "Roboto", sans-serif;
-}
-
-a {
-
-  &:active,
-  &:focus {
-    outline: none;
-    outline-style: none;
-  }
-}
-
-button:focus {
-  outline: 0;
-}
+@import "./assets/styles/general.scss";
+@import "./assets/styles/no-auth-layout.scss";
+@import "./assets/styles/section-container.scss";
 
 .box-shadow {
   -webkit-box-shadow: 0px 10px 26px -6px rgba(0, 0, 0, 0.2);
@@ -108,54 +94,4 @@ mat-nav-list {
   grid-template-columns: repeat(auto-fit, minmax(286px, 1fr));
   grid-auto-flow: dense;
   grid-column-gap: 5px;
-}
-
-.section-container {
-  padding: 15px 15px 15px 25px;
-
-  .section {
-    margin-top: 15px;
-    border-radius: 5px;
-    box-shadow: 0 8px 20px 0 rgba(218, 224, 235, .6);
-    background-color: white;
-    padding: 2px 15px 15px 15px;
-    max-width: 600px;
-    margin-left: auto;
-    margin-right: auto;
-
-    .section-header {
-      text-transform: uppercase;
-      margin-bottom: 15px;
-
-      h4 {
-        font-family: 'Noto Sans SC', sans-serif;
-        margin-bottom: 10px;
-      }
-    }
-
-    .section-content {
-      h6 {
-        font-family: 'Noto Sans SC', sans-serif;
-        text-transform: uppercase;
-        margin-top: 25px;
-      }
-
-      mat-form-field {
-        display: block;
-        width: 100%;
-      }
-
-      .mat-checkbox-container {
-        margin-bottom: 15px;
-        font-size: 14px;
-      }
-
-      .form-button-container {
-        button {
-          float: right;
-        }
-      }
-    }
-
-  }
 }
