--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -22,9 +22,9 @@
   </form>
 </div>
 
-<div class="not-a-member">
+<div class="alternative">
   <span>Not a member yet? Sign up here</span>
-  <div class="go-to-signup" matRipple>
+  <div class="go-to-signup" routerLink="/signup" matRipple>
     <fa-icon [icon]="faArrowRight"></fa-icon>
   </div>
 </div>
