--- a/client/src/app/pages/signup/signup.component.html
+++ b/client/src/app/pages/signup/signup.component.html
@@ -1,67 +1,59 @@
-<div class="parent">
-  <div class="signup-form-parent box-shadow">
-    <div class="lock-icon-parent">
-      Signup to <strong>Everest</strong>
-    </div>
-    <div class="row">
-      <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
-        <div class="col-xs-12">
-          <mat-form-field appearance="outline">
-            <mat-label>E-mail</mat-label>
-            <input matInput formControlName="email" />
-            <mat-error *ngIf="signUpForm.controls['email'].hasError('email') && !signUpForm.controls['email'].hasError('required')">
-              Please enter a valid email address
-            </mat-error>
-            <mat-error *ngIf="signUpForm.controls['email'].hasError('required')">
-              Email is <strong>required</strong>
-            </mat-error>
-          </mat-form-field>
-        </div>
+<div class="form">
+  <p class="form-title">Sign Up</p>
+  <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
+    <mat-form-field appearance="outline">
+      <mat-label>E-mail</mat-label>
+      <input matInput formControlName="email" />
+      <mat-error
+        *ngIf="signUpForm.controls['email'].hasError('email') && !signUpForm.controls['email'].hasError('required')">
+        Please enter a valid email address
+      </mat-error>
+      <mat-error *ngIf="signUpForm.controls['email'].hasError('required')">
+        Email is <strong>required</strong>
+      </mat-error>
+    </mat-form-field>
 
-        <div class="col-xs-12">
-          <mat-form-field appearance="outline">
-            <mat-label>Username</mat-label>
-            <input matInput formControlName="username" />
-            <mat-error *ngIf="signUpForm.controls['username'].hasError('minlength') && !signUpForm.controls['username'].hasError('required')">
-              Username must be <strong>4</strong> letters or more
-            </mat-error>
-            <mat-error *ngIf="signUpForm.controls['username'].hasError('required')">
-              Username is <strong>required</strong>
-            </mat-error>
-          </mat-form-field>
-        </div>
+    <mat-form-field appearance="outline">
+      <mat-label>Username</mat-label>
+      <input matInput formControlName="username" />
+      <mat-error
+        *ngIf="signUpForm.controls['username'].hasError('minlength') && !signUpForm.controls['username'].hasError('required')">
+        Username must be <strong>4</strong> letters or more
+      </mat-error>
+      <mat-error *ngIf="signUpForm.controls['username'].hasError('required')">
+        Username is <strong>required</strong>
+      </mat-error>
+    </mat-form-field>
 
-        <div class="col-xs-12">
-          <mat-form-field appearance="outline">
-            <mat-label>Password</mat-label>
-            <input matInput type="password" formControlName="password" />
-            <mat-error *ngIf="signUpForm.controls['password'].hasError('required')">
-              Password is <strong>required</strong>
-            </mat-error>
-            <mat-error *ngIf="signUpForm.controls['password'].hasError('passwordNotStrong')">
-              {{ signUpForm.controls['password'].errors.error_message }}
-            </mat-error>
-            <mat-error *ngIf="signUpForm.controls['password'].hasError('minlength')">
-              Password must be at least 4 characters
-            </mat-error>
-          </mat-form-field>
-        </div>
+    <mat-form-field appearance="outline">
+      <mat-label>Password</mat-label>
+      <input matInput type="password" formControlName="password" />
+      <mat-error *ngIf="signUpForm.controls['password'].hasError('required')">
+        Password is <strong>required</strong>
+      </mat-error>
+      <mat-error *ngIf="signUpForm.controls['password'].hasError('passwordNotStrong')">
+        {{ signUpForm.controls['password'].errors.error_message }}
+      </mat-error>
+      <mat-error *ngIf="signUpForm.controls['password'].hasError('minlength')">
+        Password must be at least 4 characters
+      </mat-error>
+    </mat-form-field>
 
-        <div class="col-xs-12">
-          <mat-form-field appearance="outline">
-            <mat-label>Re-type password</mat-label>
-            <input matInput type="password" formControlName="confirm_password" />
-            <mat-error *ngIf="signUpForm.controls['confirm_password'].hasErrors('passwordNotEquivalent')">
-              Passwords don't match
-            </mat-error>
-          </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Re-type password</mat-label>
+      <input matInput type="password" formControlName="confirm_password" />
+      <mat-error *ngIf="signUpForm.controls['confirm_password'].hasError('passwordNotEquivalent')">
+        Passwords don't match
+      </mat-error>
+    </mat-form-field>
 
-          <div class="login-signup">
-            <a routerLink="/login">Login</a>
-            <button mat-raised-button color="primary" [disabled]="signingUp">Sign Up</button>
-          </div>
-        </div>
-      </form>
-    </div>
+    <app-custom-button buttonLabel="Sign Up" [isDisabled]="signingUp"></app-custom-button>
+  </form>
+</div>
+
+<div class="alternative">
+  <span>Have an account? Sign in here</span>
+  <div class="go-to-signup" routerLink="/login" matRipple>
+    <fa-icon [icon]="faArrowRight"></fa-icon>
   </div>
 </div>
