mat input style changed

--- a/client/src/app/layouts/no-auth/no-auth.component.scss
+++ b/client/src/app/layouts/no-auth/no-auth.component.scss
@@ -58,6 +58,7 @@
 				width: 25px;
 				height: 25px;
 				position: relative;
+				vertical-align: middle;
 
 				fa-icon {
 					position: absolute;
