--- a/client/src/app/layouts/no-auth/no-auth.component.html
+++ b/client/src/app/layouts/no-auth/no-auth.component.html
@@ -1,3 +1,6 @@
+<mat-progress-bar mode="query" *ngIf="isLoading">
+</mat-progress-bar>
+
 <div class="no-auth-layout">
     <div class="left">
         <h1>Everest</h1>
