--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -1,20 +1,17 @@
-<mat-progress-bar mode="query" *ngIf="isLoading">
-</mat-progress-bar>
-
 <div class="form">
   <p class="form-title">Sign In</p>
   <form [formGroup]="loginForm" (ngSubmit)="login()">
     <mat-form-field appearance="outline">
-      <mat-label>username</mat-label>
+      <mat-label>Username</mat-label>
       <input matInput formControlName="username" />
-      <mat-error *ngIf="loginForm.controls['username'].hasError('required')">
+      <mat-error *ngIf="loginFormControls.username.hasError('required') && loginFormControls.username.dirty">
         Please enter username
       </mat-error>
     </mat-form-field>
     <mat-form-field appearance="outline">
-      <mat-label>password</mat-label>
+      <mat-label>Password</mat-label>
       <input matInput type="password" formControlName="password" />
-      <mat-error *ngIf="loginForm.controls['password'].hasError('required')">
+      <mat-error *ngIf="loginFormControls.password.hasError('required') && loginFormControls.password.dirty">
         Please enter password
       </mat-error>
     </mat-form-field>
