--- a/client/src/assets/styles/section-container.scss
+++ b/client/src/assets/styles/section-container.scss
@@ -5,7 +5,7 @@
 		margin-top: 15px;
 		border-radius: 5px;
 		box-shadow: 0 8px 20px 0 rgba(218, 224, 235, 0.6);
-		background-color: white;
+		background-color: #F6F8FA;
 		padding: 2px 15px 15px 15px;
 		max-width: 600px;
 		margin-left: auto;
