--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~normalize.css/normalize.css";
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "./assets/styles/material-overrides.scss";
 @import "./assets/styles/general.scss";
 @import "./assets/styles/no-auth-layout.scss";
 @import "./assets/styles/section-container.scss";
