login page updated

--- a/client/src/app/layouts/no-auth/no-auth.component.html
+++ b/client/src/app/layouts/no-auth/no-auth.component.html
@@ -3,6 +3,10 @@
 
 <div class="no-auth-layout">
     <div class="left">
+        <div class="mobile-bg">
+            <div class="circle"></div>
+            <img [src]="image" alt="Mountains">
+        </div>
         <h1>Everest</h1>
         <p>Free academic resoures curated by the community
             for the community
