promise all in post

--- a/client/src/app/general/post/post.component.html
+++ b/client/src/app/general/post/post.component.html
@@ -4,7 +4,7 @@
     <div class="user-image" [ngStyle]="{ 'background-image': 'url(' + userImage  +')' }">
     </div>
     <div class="uploader-info">
-      <strong>{{ username }}</strong>
+      <span>{{ username }}</span>
       <small>{{ timestamp }}</small>
     </div>
     <div class="post-menu" (click)="openPostDialog()">
