--- a/client/src/app/general/post/post.component.scss
+++ b/client/src/app/general/post/post.component.scss
@@ -49,6 +49,7 @@
         display: block;
         margin-top: 5px;
         color: rgba(0, 0, 0, .3);
+        font-size: 12px;
         text-transform: lowercase;
       }
     }
@@ -77,7 +78,7 @@
     padding: 20px 0 10px 15px;
 
     strong {
-      font-family: 'Noto Sans SC', sans-serif;
+      font-family: 'Montserrat', sans-serif;
       font-size: 16px;
       text-transform: uppercase;
     }
