post styles updated

--- a/client/src/app/general/post/post.component.scss
+++ b/client/src/app/general/post/post.component.scss
@@ -128,6 +128,7 @@
       text-align: center;
       display: block;
       font-weight: bold;
+      font-family: 'Montserrat', sans-serif;
       cursor: pointer;
       color: #481A89;
       font-size: 12px;
@@ -218,7 +219,7 @@
       top: 20px;
       background-color: #481A89;
       border: none;
-      font-size: 12px;
+      font-size: 11px;
       margin-top: 0;
       opacity: 0;
       animation: buttonAppear 0.1s ease-in-out;
