--- a/client/src/app/general/dialogs/atc/atc.component.scss
+++ b/client/src/app/general/dialogs/atc/atc.component.scss
@@ -1,25 +1,8 @@
-.mat-dialog-title {
-    text-transform: uppercase;
-
-    fa-icon {
-        color: rgba(0,0,0,.7);
-        margin-right: 10px;
-    }
-}
-
-.dialog-image {
-    max-width: 400px;
-    img {
-        border-radius: 3px;
-        max-width: 100%;
-    }
-}
-
 .dialog-title {
     font-size: 16px;
     max-width: 400px;
     strong {
-        font-family: 'Noto Sans SC', sans-serif;
+        font-family: 'Montserrat', sans-serif;
     }
 }
 
