--- a/client/src/app/layouts/main/main.component.html
+++ b/client/src/app/layouts/main/main.component.html
@@ -13,7 +13,7 @@
                     <fa-icon [icon]="faUser"></fa-icon>&nbsp;&nbsp;View Profile
                 </button>
                 <button mat-menu-item routerLink="/manage" routerLinkActive="active">
-                    <fa-icon [icon]="faStream"></fa-icon>&nbsp;&nbsp;Manage Resources
+                    <fa-icon [icon]="faStream"></fa-icon>&nbsp;&nbsp;Manage
                 </button>
                 <button mat-menu-item (click)="logout()">
                     <fa-icon [icon]="faSignOutAlt"></fa-icon>&nbsp;&nbsp;Logout
