--- a/client/src/assets/styles/material-overrides.scss
+++ b/client/src/assets/styles/material-overrides.scss
@@ -3,7 +3,7 @@
     box-shadow: 0 10px 16px rgba(0, 0, 0, .1);
     background-color: white;
     border-radius: 4px;
-    color: transparent;
+    color: transparent !important;
     transition: opacity 0s !important;
   }
 
