--- a/client/src/app/general/collection/collection.component.scss
+++ b/client/src/app/general/collection/collection.component.scss
@@ -53,7 +53,7 @@ $block-border: 1px solid white;
     }
 
     p {
-        margin-left: 5px;
+        padding-left: 10px;
         margin-top: 8px;
         margin-bottom: 0;
 
