--- a/client/src/app/general/collection/collection.component.html
+++ b/client/src/app/general/collection/collection.component.html
@@ -6,8 +6,10 @@
     <div class="block" [ngStyle]="{'background-image': 'url('+ image4 +')'}"></div>
   </div>
 
-  <p class="collection-name">{{ data.title | truncate:[17] }}</p>
-  <p class="no-of-resources">
+  <div class="bottom-section">
+    <p class="collection-name">{{ data.title | truncate:[17] }}</p>
+    <p class="no-of-resources">
       <small>{{ data.resources.length }} {{ data.resources.length >= 0 ? 'resource' : 'resources'}}</small>
-  </p>
+    </p>
+  </div>
 </div>
