--- a/client/src/app/pages/manage/manage-resources.component.scss
+++ b/client/src/app/pages/manage/manage-resources.component.scss
@@ -14,3 +14,18 @@
     }
   }
 }
+
+.resource-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(286px, 1fr));
+  grid-auto-flow: dense;
+  grid-column-gap: 5px;
+  justify-items: center;
+}
+
+.list-of-collections {
+  max-width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));;
+  justify-items: center;
+}
