--- a/client/src/assets/styles/section-container.scss
+++ b/client/src/assets/styles/section-container.scss
@@ -1,5 +1,5 @@
 .section-container {
-	padding: 15px 15px 15px 25px;
+	padding: 15px 15px 15px 15px;
 
 	.section {
 		margin-top: 15px;
@@ -44,5 +44,11 @@
 				}
 			}
 		}
+	}
+}
+
+@media (min-width: 768px) {
+	.section-container {
+		padding: 15px 15px 15px 25px;
 	}
 }
